[package]
name = "nar-alike-deduper"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
regex = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
async-compression = { version = "0.4", features = ["tokio", "xz"]}
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
duct = "0.13"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots", "json"] }
async-channel = "2"
futures = "0.3"
